syntax = "proto2";
package msg;
//import "serialize.proto";

// 玩家摘要信息
message FriendBrief {
    optional int64 roleid = 1;
    optional string name = 2;
    optional string head = 3;
    optional int32 sex = 4;
    optional int32 level = 5;
    optional int64 gold = 6;
    optional int32 viplevel = 7;
    optional int64 offlinetime = 8;     // 离线时间
}


// 好友数据
message FriendData {
    optional FriendBrief base = 1;
    optional int32 givegold = 2;
    optional int32 getgold = 3;
}


// 请求好友列表信息
message C2GW_ReqFriendsList {
}
message GW2C_RetFriendsList {
    repeated FriendData friendlist = 1;
}


// 请求赠送好友金币
message C2GW_ReqPresentToFriend {
    optional int64 roleid = 1;
}
message GW2C_RetPresentToFriend {
}
// 好友赠送金币通知推送
message GW2C_PushFriendPresent {
    optional int64 handler = 1;
    optional int64 roleid = 2;
}


// 请求领取好友赠送的金币
message C2GW_ReqGetFriendPresent {
    optional int64 roleid = 1;
}
message GW2C_RetGetFriendPresent {
    repeated int64 roleid = 1;
}


// 好友添加请求列表
message C2GW_ReqFriendRequestList { 
}
message GW2C_RetFriendRequestList {
    repeated msg.FriendBrief array = 1;
}


// 发送删除好友的请求
message C2GW_ReqRemoveFriend {
    optional int64 roleid = 1;
}
message GW2C_RetRemoveFriend {
    optional int64 roleid = 1;
}
// 被好友删除的通知推送
message GW2C_PushRemoveFriend {
    optional int64 handler = 1;     // 服务器使用
    optional int64 roleid = 2;
}


// 发送添加用户为好友的请求
message C2GW_ReqAddFriend {
    optional int64 roleid = 1;
}
message GW2C_RetAddFriend {
}
// 好友添加成功的通知推送
message GW2C_PushFriendAddSuccess {
    optional int64 handler = 1;     // 服务器使用
    optional msg.FriendBrief friend = 2;
}
// 添加好友请求通知推送
message GW2C_PushAddYouFriend {
    optional int64 handler = 1;     // 服务器使用
    optional msg.FriendBrief friend = 2;
}


// 处理好友请求的请求
message C2GW_ReqProcessFriendRequest {
    optional int64 roleid = 1;
    optional bool isaccept = 2;
}
message GW2C_RetProcessFriendRequest {
}


// 发送搜索用户的请求
message C2GW_ReqFriendSearch {
    optional string val = 1;
}
message GW2C_RetFriendSearch {
    repeated msg.FriendBrief brief = 1;
}


//// 好友上线通知推送
//message GW2C_PushFriendLogin {
//    optional int64 roleid = 1;
//    optional int64 offlinetime = 2;
//    repeated int64 friends = 3;     // 服务器使用
//}

// 邀请好友进房间
message C2GW_ReqInviteFriendJoin {
    optional int64 id = 1;
    repeated int64 roleid = 2;
}

message GW2C_RetInviteFriendJoin {
}

// 被好友邀请推送
message GW2C_PushFriendInvitation {
    repeated int64 handler = 1;     // 服务器使用
    optional int64 id = 2;
    optional int64 roleid = 3;
    optional string pwd = 4;
    optional int32 roomid = 5;
}


