syntax = "proto2";
package msg;


// 拉取百人大战房间列表
message C2GW_ReqTFRoomList {
    optional int64 uid = 1;     // 服务器使用
}

message GW2C_RetTFRoomList {
    repeated TexasFightRoom array = 1;
}

message TexasFightRoom {
    optional int64 id = 1;      // 唯一id
    optional int32 hwid = 2;    // 配置表id
    optional int32 join = 3;    // 已经参加人数
    optional int32 pool = 4;    // 奖池   
}


// 请求进入百人大战
message C2GW_ReqEnterTFRoom {
    optional int64 id = 1;      // 房间uid
    optional int64 userid = 2;  // 玩家id，服务器使用
}

message GW2C_RetEnterTFRoom {
    repeated TFPlayerPos playerlist = 1; // 坐下玩家列表
    repeated TFBetInfo betlist = 2;         // 
    repeated int32 mybet = 3;       // 自己下注数量
    optional int32 state = 4;       // 房间状态 (用来表示房间是处于下注 休息 还是其他的阶段)
    optional int32 statetime = 5;   // 
    optional int32 pool = 6;        // 奖池
    optional int32 hwid = 7;        // 配置表id
    optional int32 bankergold = 8;  // 庄家金币
}  

message TFPlayerPos {
    optional int32 roleid = 1;
    optional int32 pos = 2;
}

message TFBetInfo {
    repeated int32 cards = 1;   //
    optional int32 bet = 2;     //
    optional int32 pos = 3;     // 押注位置，0庄家，从左到右1-4
}

// 请求下注
message C2RS_ReqTexasFightBet {
    optional int32 pos = 1;
    optional int32 num = 2;
}

message RS2C_RetTexasFightBet {
}


// 拉取奖池信息
message C2GW_ReqTFAwardPool {
}

message GW2C_RetTFAwardPool {
    repeated int32 cards = 1;
    optional int32 gold = 2;
    optional int32 time = 3;
    repeated TFPlayer prizeList = 4;
}


// 拉取无座玩家列表
message C2RS_ReqTFStandPlayer {
    optional int32 start = 1;
    optional int32 count = 2;
}

message RS2C_RetTFStandPlayer {
    repeated TFPlayer playerlist = 1;
    optional int32 total = 2;
}

message TFPlayer {
    optional int32 roleid = 1;
    optional string name = 2;
    optional string head = 3;
    optional int32 sex = 4;
    optional int32 gold = 5;
    optional int32 pos = 6;
}


// 拉取胜负走势列表
message C2RS_ReqWinLoseTrend {
}

message RS2C_RetWinLoseTrend {
    repeated TFWinLoseTrend trendList = 1;
}

message TFWinLoseTrend {
    optional int32 p1 = 1;
    optional int32 p2 = 2;
    optional int32 p3 = 3;
    optional int32 p4 = 4;
}


// 拉取庄家列表
message C2RS_ReqTFBankerList {
}

message RS2C_RetTFBankerList {
    repeated TFPlayer bankerlist = 1;
}


// 请求上庄
message C2RS_ReqTFBecomeBanker {
    optional int32 gold = 1;
}

message RS2C_RetTFBecomeBanker {
}


// 请求下庄
message C2RS_ReqTFQuitBanker {
}

message RS2C_RetTFQuitBanker {
    optional string errcode = 1;
}


// 请求坐下
message C2RS_ReqTFSitDown {
    optional int32 pos = 1;
}

message RS2C_RetTFSitDown {
}


// 请求站起
message C2RS_ReqTFStandUp {
}

message RS2C_ReqTFStandUp {
}


// 请求离开
message C2RS_ReqTFLeave {
}

message RS2C_RetTFLeave {
}


// 请求下一局开局
message C2RS_ReqTFStart {
}

message RS2C_RetTFStart {
}


// 注池变更推送
message RS2C_PushBetPoolChange {
    repeated int32 bet = 1;
    repeated TFBetPoolChange posbetlist = 2;
}

message TFBetPoolChange {
    optional int32 pos = 1;     // 注位置
    repeated int32 bet = 2;     // 下注量
}


// 发牌推送
message RS2C_PushTFRoundOver {
    repeated TFBetPool betlist = 1;     //
    repeated TFRankPlayer ranklist = 2;    // 赢取排名
    optional int32 gold = 3;        // 结算金币
    optional int32 pool = 4;        // 总奖池大小
    optional int32 bankergold = 5;  // 庄家金币
    optional bool iswin = 6;        // 是否赢
}
message TFBetPool {
    optional int32 pos = 1;     // 注池位置  0是庄家  其他从左向右1-4
    repeated int32 cards = 2;   // 牌
    optional int32 win = 3;     // 是否赢了   0输  1赢  2平
}
message TFRankPlayer {
    optional int32 roleid = 1;  // 玩家id
    optional int32 num = 2;     // 赢取数量
}


// 房间状态变更推送
message RS2C_PushTFStateChange {
    optional int32 state = 1;
    optional int64 statetime = 2;
}


// 位置变更推送
message RS2C_PushTFPosChange {
    optional int32 pos = 1;
    optional int32 roleid = 2;
    optional int32 bankergold = 3;
}


// 玩家退出房间推送
message RS2C_PushTFPlayerLeave {
    optional int32 id = 1;
}


